# src/controllers/interfaces/index.ts
@@ -6,6 +6,7 @@ export interface IHelloController{
 
 export interface IUserController{
     // Get all user from database || Get user by id
-    getUser(id?:string): Promise<any>
+    getUser(id?:string):   Promise<any>
     deleteUser(id:string): Promise<any>
+    createUser(user: any): Promise<any>
 }
